# atlas-init

./: .gitignore  .pre-commit-config.yaml  .tool-versions  LICENSE  atlas_init.yaml  atlasci_local_install.sh  justfile  pre-commit.sh  pyproject.toml  readme.md  requirements.txt  terraform.yaml
.github/: dependabot.yml
atlas_init/: __init__.py  typer_app.py
py/: .coverage  file_copy.py  pre-commit.sh  pyproject.toml
py/atlas_init/: __init__.py  __main__.py  cfn.py  cfn_parameter_finder.py  cfn_parameter_finder_test.py  cfn_test.py  cli.py  cli_args.py  confg_test.py  config.py  constants.py  env_vars.py  env_vars_test.py  git_utils.py  git_utils_test.py  go.py  humps.py  in_repo.py  region.py  repo_paths.py  rich_log.py  run.py  schema.py  schema_inspection_test.py  schema_test.py  sdk.py  sdk_test.py  tf_runner.py  tf_vars.py  typer_app.py  util.py
py/atlas_init/cli_cfn/: app.py  aws.py  cfn.py  cfn_parameter_finder.py  cfn_parameter_finder_test.py  cfn_test.py  contract.py  example.py  files.py
py/atlas_init/cli_helper/: go.py  run.py  run_manager.py  sdk.py  sdk_test.py  tf_runner.py
py/atlas_init/cli_root/: __init__.py  go_test.py  trigger.py
py/atlas_init/cli_tf/: app.py  changelog.py  debug_logs.py  debug_logs_test_data.py  debug_logs_test_data_package_config.py  example_vars.py  example_vars_test.py  github_logs.py  go_test_run.py  go_test_run_format.py  go_test_summary.py  log_clean.py  mock_tf_log.py  schema.py  schema_go_parser.py  schema_inspection.py  schema_table.py  schema_table_models.py  schema_test.py  schema_v2.py  schema_v2_api_parsing.py  schema_v2_sdk.py  schema_v3.py  schema_v3_sdk.py  schema_v3_sdk_base.py  schema_v3_sdk_create.py
py/atlas_init/cli_tf/example_vars_test/: test_update_example_vars.tf
py/atlas_init/cli_tf/hcl/: cli.py  cluster_mig.py  modifier.py  modifier_test.py  parser.py
py/atlas_init/cli_tf/hcl/modifier_test/: test_modify_example.tf  test_process_variables.tf
py/atlas_init/cloud/: aws.py
py/atlas_init/repos/: cfn.py  go_sdk.py  path.py
py/atlas_init/settings/: confg_test.py  config.py  env_vars.py  env_vars_generated.py  env_vars_test.py  path.py  rich_log.py  rich_utils.py
py/atlas_init/test_data/: cfn_project_template.json  provider-code-spec.json
py/scripts/: atlas_init_sort.py  file_copy.py
py/test_atlas_init/: conftest.py  test_cli.py
py/test_atlas_init/test_cli_cfn/: cfn_parameter_finder_test.py  cfn_test.py  files_test.py  test_contract.py
py/test_atlas_init/test_cli_cfn/test_contract/: test_contract_test_trigger_.yaml
py/test_atlas_init/test_cli_cfn/test_data/: cluster-self-managed-sharding.json
py/test_atlas_init/test_cli_helper/: test_go.py  test_run.py  test_run_manager.py  test_sdk.py
py/test_atlas_init/test_cli_root/: test_go_test.py  test_trigger.py
py/test_atlas_init/test_cli_tf/: conftest.py  test_changelog.py  test_clean_tf_spec.py  test_cluster_mig.py  test_debug_logs.py  test_github_logs.py  test_go_test_run.py  test_mock_tf_log.py  test_schema.py  test_schema_go_parser.py  test_schema_inspection.py  test_schema_table.py  test_schema_v2.py  test_schema_v2_api_parsing.py  test_schema_v2_sdk.py  test_schema_v3_sdk.py
py/test_atlas_init/test_cli_tf/test_data/: admin_api.yaml  schema_v2.yaml
py/test_atlas_init/test_cli_tf/test_data/cluster_mig/: 01_free_cluster_with_count.tf  01_free_cluster_with_count_expected.tf  02_geosharded.tf  02_geosharded_expected.tf  03_geosharded_with_nodes.tf  03_geosharded_with_nodes_expected.tf  04_autoscaling.tf  04_autoscaling_expected.tf  05_multi_region_expected.tf  06_dynamic_region_config.tf  06_dynamic_region_config_expected.tf  state_example.json
py/test_atlas_init/test_cli_tf/test_data/github_ci_logs/: 30230451013_tests-1.9.x-latest_tests-1.9.x-latest-dev_config.txt  33721193952_tests-1.10.x-latest_tests-1.10.x-latest-false_advanced_cluster.txt
py/test_atlas_init/test_cli_tf/test_data/tf_spec/: advancedcluster.yaml  pushbasedlogexport.yaml  resourcepolicy.yaml  resourcepolicy.yml  searchdeployment.yaml
py/test_atlas_init/test_cli_tf/test_debug_logs/: test_parse_http_requests_TestAccAdvancedCluster_basic_log_.yaml  test_parse_http_requests_TestAccAdvancedCluster_configSharded_log_.yaml  test_parse_http_requests_TestAccClusterAdvancedCluster_basicTenant_log_.yaml  test_parse_http_requests_TestAccResourcePolicy_basic_log_.yaml
py/test_atlas_init/test_cli_tf/test_hcl/: test_cli.py  test_parser.py
py/test_atlas_init/test_cli_tf/test_mock_tf_log/: test_mock_tf_log_TestAccClusterAdvancedCluster_basicTenant_log_.yaml
py/test_atlas_init/test_cli_tf/test_schema_table/: SDKv2.md  TPF.md  advancedclustertpf_r.md
py/test_atlas_init/test_cli_tf/test_schema_v2/: employee_access_grant.go  non_compliant_resources.go  resource_policy.go  resource_policy_data_source_schema.go  stream_processor.go  test_resource_schema_full.go
py/test_atlas_init/test_cli_tf/test_schema_v2_api_parsing/: openapi_text_changes.yaml
py/test_atlas_init/test_cli_tf/test_schema_v2_sdk/: resource_policy.go
py/test_atlas_init/test_cli_tf/test_schema_v3_sdk/: model_from_ApiAtlasResourcePolicy.go  model_from_ClusterDescription20240805.go  model_from_ClusterDescriptionProcessArgs20240805.go  resourcepolicy.go
py/test_atlas_init/test_repos/: test_go_sdk.py
py/test_atlas_init/test_settings/: test_config.py  test_env_vars.py
scripts/: atlas_init_sort.py  file_copy.py  file_utils.py
test_atlas_init/: conftest.py  test_cli.py
tf/: always.tf  aws-vpc.tf  main.tf  outputs.tf  providers.tf  variables.tf
(+234 files in other folders)
